--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,4 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-charts = "0.3.0"
-rustplotlib = "0.0.4"
+clap = { version = "4.2.7", features = ["derive"] }
