--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.2.7", features = ["derive"] }
+plotters = "0.3.4"
+serde = { version = "1.0.163", features = ["derive"] }
+serde_json = "1.0.96"
